# gitools

./: Cargo.toml  README.md  Taskfile.yaml  check_size.py  🐙 git-tools.code-workspace
cmds/br/: Cargo.toml  README.md  build.rs
cmds/br/src/: action.rs  args.rs  main.rs
cmds/sync/: Cargo.toml  README.md  build.rs
cmds/sync/examples/: stdio.rs
cmds/sync/src/: main.rs  plan.rs
cmds/tldr/: Cargo.toml  build.rs
cmds/tldr/src/: main.rs
cmds/usr/: Cargo.toml  README.md  build.rs
cmds/usr/src/: action.rs  args.rs  main.rs  profiles.rs
common/: Cargo.toml
common/examples/: child_exec.rs
common/src/: lib.rs
common/src/cli/: action.rs  context.rs  spinner.rs
common/src/cli/print/: child_output.rs  file.rs  md.rs  tldr.rs  version.rs
common/src/git/: git_config.rs  mod.rs
proxies/: Cargo.toml  build.rs
proxies/src/: add.rs  branch.rs  checkout.rs  clone.rs  commit.rs  lib.rs  log.rs  merge.rs  pull.rs  push.rs  remote.rs  status.rs
proxies/tldr/: add.md  branch.md  checkout.md  clone.md  commit.md  log.md  merge.md  pull.md  push.md  remote.md  status.md
